--- a/js practice/to-do app/style.css
+++ b/js practice/to-do app/style.css
@@ -14,7 +14,7 @@ body{
 .container {
     background: linear-gradient(140deg, #03ddffcb 0%,#fc68b2b6 110%);
     width: 650px;
-    height: 550px;
+    background-size: contain;
     border: none;
     box-shadow: 0px 0px 5px grey;
 }
